--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(flutter_ffmpeg_plugin SHARED
 )
 target_include_directories(flutter_ffmpeg_plugin PRIVATE
   "${CMAKE_CURRENT_SOURCE_DIR}/../windows/ffmpeg/include"
+  "${CMAKE_CURRENT_SOURCE_DIR}/../windows/sdl/include"
 )
 target_compile_features(flutter_ffmpeg_plugin PUBLIC cxx_std_17)
 
@@ -17,6 +18,8 @@ target_link_libraries(flutter_ffmpeg_plugin PRIVATE
   "${CMAKE_CURRENT_SOURCE_DIR}/../windows/ffmpeg/lib/avutil.lib"
   "${CMAKE_CURRENT_SOURCE_DIR}/../windows/ffmpeg/lib/swresample.lib"
   "${CMAKE_CURRENT_SOURCE_DIR}/../windows/ffmpeg/lib/swscale.lib"
+  "${CMAKE_CURRENT_SOURCE_DIR}/../windows/sdl/lib/x64/SDL2.lib"
 )
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/../windows/ffmpeg/bin/ DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/build/Debug/)
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/../windows/sdl/lib/x64/SDL2.dll DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/build/Debug/SDL2.dll)
